# lavalamp-viewer

./: Makefile.am  Makefile.in  README  README.md  README~  backup-031920151022-pre-lavalamp.tgz  config.h.in  configure  configure.ac  lavalamp.cfg  lavalamp.desktop
src/: Makefile.am  Makefile.in  main.c  main.h
