## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir). \
	$(LIBCONFIG_CFLAGS). \
	$(libconfig_CFLAGS)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = lavalamp

lavalamp_SOURCES = \
	main.c \
	main.h

lavalamp_LDFLAGS = 

lavalamp_LDADD =  \
	$(libconfig_LIBS) \
	$(LIBCONFIG_LIBS)
